# open_manipulator_save_and_load

./: CMakeLists.txt  README.md  package.xml  setup.py
cfg/: output.txt
launch/: save_and_load.launch
nodes/: save_and_load
